connection to the api info succesful
Added management of Errors on connection to api. handleError it's based on tour of heroes method.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,10 @@
 <header>
-    <h3>Space X</h3>
+    <div *ngIf="info$ | async as info">
+        <p>
+            {{info.name}}
+        </p>
+        <p>
+            {{info.founder}}
+        </p>
+    </div>
 </header>
