--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,11 @@
 $font-color: #FFFDFF;
 $background-color: #01020C;
 $background-color-secondary: #0B0B0B;
+@font-face {
+    font-family: 'Universo Black';
+    src: url(./assets/font/UniversoBlack.ttf);
+}
+$font-title: 'Universo Black', sans-serif;
 
 /** mixin functions */
 @mixin flex($justify: flex-start, $align: flex-start, $direction: row, $wrap: wrap) {
@@ -11,9 +16,22 @@ $background-color-secondary: #0B0B0B;
     flex-flow: $direction $wrap;
 }
 
+@mixin background($url-image,$size: cover, $repeat: no-repeat, $position: center){
+    background-image: $url-image;
+    background-size: $size;
+    background-repeat: $repeat;
+    background-position: $position;
+}
+
+
+/** General styles */
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: content-box;
+}
+
+html{
     background: $background-color-secondary;
 }
