sass and launches data connected
Almost all the landing sass added, connection with the space x for the launches information implemented.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,31 +5,26 @@
             <li> <a href="/"> About </a></li>
             <li></li>
         </ul>
-        <button type="button" class="show-data"> Explore </button>
-
+        <button type="button" class="show-data"> <span class="text">Explore</span> </button>
     </nav>
     <div *ngIf="info$ | async as info" class="info-data info-data--text">
-        <h1>
-            {{info.name}}
-        </h1>
-        <h3>
-            {{info.founder}}
-        </h3>
-        <p>
-            {{info.summary}}
-        </p>
-<!--         <p>
-            {{info.founded}}
-        </p>
-        <p>
-            {{info.headquarters}}
-        </p>
-        <p>
-            {{info.valuation}}
-        </p> -->
+        <div class="text-box">
+            <h1>
+                {{info.name}}
+            </h1>
+            <h3>
+                {{info.founder}}
+            </h3>
+            <p>
+                {{info.summary}}
+            </p>
+            <button>
+                <span class="text">Explore</span>
+            </button>
+        </div>
     </div>
     <Picture>
-        <img src="../../assets/img/rocket.png" alt="rocket" class="rocket-img">
+        <img src="../../assets/img/rocket.png" alt="rocket" class="rocket-img slide-top">
     </Picture>
-    
+
 </header>
