--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,8 +1,12 @@
 @import"../../styles.scss";
 
 .info {
-    @include background(url("../../assets/img/background.jpg"));
+    @include background(url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg"));
     height: 100vh;
+}
+
+.navbar {
+    @include flex(space-between, center, row);
 }
 
 h1 {
@@ -12,18 +16,143 @@ h1 {
 }
 
 .rocket-img {
-    position: relative;
-    float: right;
+    position: absolute;
+    bottom: -80px;
+    right: 10px;
+    height: 90%;
+}
+
+.slide-top {
+    -webkit-animation: slide-top 0.8s ease-in both;
+    animation: slide-top 0.8s ease-in both;
+}
+
+@-webkit-keyframes slide-top {
+    0% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+
+    100% {
+        -webkit-transform: translateY(-100px);
+        transform: translateY(-100px);
+    }
+}
+
+@keyframes slide-top {
+    0% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+
+    100% {
+        -webkit-transform: translateY(-100px);
+        transform: translateY(-100px);
+    }
 }
 
 
 .info-data {
+    position: relative;
+    @include flex(space-between, center);
+    gap: 10%;
+    //width: 100%;
     &--text {
         font-family: $font-title;
         color: $font-color;
     }
 }
 
-.navbar{
-    @include flex(space-between, center, row);
+.text-box {
+    margin-left: 10%;
+    margin-top: 10%;
+    position: relative;
+    width: 600px;
 }
+
+p {
+    font-family: $principal-font;
+}
+
+button {
+    @include flex();
+    margin-top: 20px;
+    background-image: linear-gradient(144deg, #8C129A, #70097C, #5E0D98, #380C84, #610F96);
+    border: 0;
+    border-radius: 25px;
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    box-sizing: border-box;
+    font-family: $principal-font;
+    font-size: 18px;
+    line-height: 1em;
+    min-width: 140px;
+    padding: 3px;
+    cursor: pointer;
+    transition: all .3s;
+}
+
+button:active,
+button:hover {
+    outline: 0;
+}
+
+button span {
+    background-color: $background-color;
+    padding: 16px 24px;
+    border-radius: 25px;
+    width: 100%;
+    height: 100%;
+    transition: 300ms;
+    color: $font-color;
+}
+
+button:hover span {
+    background: none;
+}
+
+button:active {
+    transform: scale(0.9);
+}
+
+/* .btn {
+    padding: 1.1em 2em;
+    margin-top: 20px;
+    background: none;
+    border: 2px solid #403945;
+    font-size: 15px;
+    color: $font-color;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition: all 0.3s;
+    border-radius: 25px;
+    background-color: #2F2634;
+    font-weight: bolder;
+    box-shadow: 0 1px 0 1px #0e0d0d;
+}
+
+.btn:before {
+    content: "";
+    position: absolute;
+    width: 100px;
+    height: 120%;
+    background-color: #8A8E91;
+    top: 50%;
+    transform: skewX(30deg) translate(-150%, -50%);
+    transition: all 0.5s;
+}
+
+.btn:hover {
+    background-color: #B8D4E3;
+    color: #fff;
+    box-shadow: 0 2px 0 2px #0d3b66;
+}
+
+.btn:hover::before {
+    transform: skewX(30deg) translate(150%, -50%);
+    transition-delay: 0.1s;
+}
+
+.btn:active {
+    transform: scale(0.9);
+} */
