--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,12 @@
 <header class="info">
-    <nav class="navbar">
+<!--     <nav class="navbar">
         <ul>
             <li> <a href="/"> Home </a> </li>
             <li> <a href="/"> About </a></li>
             <li></li>
         </ul>
         <button type="button" class="show-data"> <span class="text">Explore</span> </button>
-    </nav>
+    </nav> -->
     <div *ngIf="info$ | async as info" class="info-data info-data--text">
         <div class="text-box">
             <h1>
