--- a/src/app/launches/launches.component.scss
+++ b/src/app/launches/launches.component.scss
@@ -10,20 +10,31 @@
     display: grid;
     gap: 1rem;
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-    //color: $font-color;
+    color: $font-color;
 }
 
 .card{
+    margin: 0.5rem;
+    padding: 0.6rem;
     font-family: $principal-font;
-    border: 1px solid white;
+    font-size: 22px;
+    background-color: $background-color-secondary;
+    border-radius: 15px;
+
     &__img{
         width: 100%; //helps the images to maintain themselves on a responsive layout
         aspect-ratio: 1/1;
         object-fit: cover;
         cursor: pointer;
     }
-    &__card-content{
-        background: white;
-        align-self: end;   
+    &__mission-name{
+        font-family: $secondary-font;
+        text-transform: uppercase;
+        margin-top: 10px;
+        text-align: center;
+    }
+    &__rocket-name{
+        /* color: #858AE3; */
+        opacity: 0.75;
     }
 }
