router link fixed

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,9 +18,11 @@
             <p>
                 {{info.summary}}
             </p>
+            <a routerLink="/launches">
             <button>
                 <span class="text">Explore</span>
             </button>
+            </a>
         </div>
     </div>
     <Picture>
