--- a/src/app/launches/launches.component.html
+++ b/src/app/launches/launches.component.html
@@ -2,7 +2,7 @@
     <section class="items" >
         <ng-container *ngFor="let l of launches$ | async">
             <div class="card">
-                <a routerLink="launches/{{l.flight_number}}">
+                <a routerLink="/detail/{{l.flight_number}}">
                     <img src={{l.links.mission_patch_small}} alt="mission image" class="card__img"/>
                 </a>
                 
