--- a/src/app/launches/launches.component.html
+++ b/src/app/launches/launches.component.html
@@ -1,18 +1,15 @@
 <main class="container">
-    <section class="items" >
-        <ng-container *ngFor="let l of launches$ | async">
-            <div class="card">
-                <a routerLink="/detail/{{l.flight_number}}">
-                    <img src={{l.links.mission_patch_small}} alt="mission image" class="card__img"/>
-                </a>
-                
-                <div class="card__card-content">
-                    <h4 class="card__mission-name">{{l.mission_name}}</h4>
-                    <p class="card__launch-year">{{l.launch_year}}</p>
-                    <p class="card__rocket-name">{{l.rocket.rocket_name}}</p>
-                    <span *ngIf="isFavorite(l.flight_number)"> Mark as Favorite </span>
-                </div>
+    <section class="items">
+        <div *ngFor="let l of launches$ | async" class="card">
+            <a routerLink="/detail/{{l.flight_number}}">
+                <img src={{l.links.mission_patch_small}} alt="mission image" class="card__img" />
+            </a>
+            <div class="card__card-content">
+                <h4 class="card__mission-name">{{l.mission_name}}</h4>
+                <p class="card__launch-year">{{l.launch_year}}</p>
+                <p class="card__rocket-name">{{l.rocket.rocket_name}}</p>
+                <span *ngIf="isFavorite(l.flight_number)"> Mark as Favorite </span> <!-- Change -->
             </div>
-        </ng-container>  
+        </div>
     </section>
 </main>
