--- a/src/app/launches/launches.component.scss
+++ b/src/app/launches/launches.component.scss
@@ -35,3 +35,35 @@
         opacity: 0.75;
     }
 }
+
+input[type="checkbox"] {
+    display: none;
+  }
+  
+  label svg {
+    width: 44px;
+    height: 44px;
+    fill: none;
+    stroke: #000;
+    stroke-width: 2px;
+  }
+  
+  input[type="checkbox"]:checked + label svg {
+    fill: #FFC107;
+    animation: pop_42 0.5s ease-out;
+  }
+  
+  @keyframes pop_42 {
+    0% {
+      transform: scale(1);
+    }
+  
+    50% {
+      transform: scale(1.5);
+    }
+  
+    100% {
+      transform: scale(1);
+    }
+  }
+  
