--- a/src/app/launches/launches.component.scss
+++ b/src/app/launches/launches.component.scss
@@ -1,69 +1,85 @@
 @import"../../styles.scss";
 
-.container{
-    max-width: 100rem;
-    margin-inline: auto;
-    padding-inline: 2rem;
+.container {
+  max-width: 100rem;
+  margin-inline: auto;
+  padding-inline: 2rem;
+  position: relative;
 }
 
-.items{
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+.items {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
 }
 
-.card{
-    margin: 0.5rem;
-    padding: 0.6rem;
-    background-color: $background-color-secondary;
-    border-radius: 15px;
+.favorite-launch{
+  width: 500px;
+  grid-column: 1 / -1;
+  grid-row: 1;
+  z-index: 1;
+  &__img {
+    width: 100%; //helps the images to maintain themselves on a responsive layout
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    cursor: pointer;
+  }
+}
 
-    &__img{
-        width: 100%; //helps the images to maintain themselves on a responsive layout
-        aspect-ratio: 1/1;
-        object-fit: cover;
-        cursor: pointer;
-    }
-    &__mission-name{
-        font-size: 22px;
-        font-family: $secondary-font;
-        text-transform: uppercase;
-        margin-top: 10px;
-        text-align: center;
-    }
-    &__rocket-name{
-        opacity: 0.75;
-    }
+.card {
+  display: contents;
+  margin: 0.5rem;
+  padding: 0.6rem;
+  background-color: $background-color-secondary;
+  border-radius: 15px;
+
+  &__img {
+    width: 100%; //helps the images to maintain themselves on a responsive layout
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    cursor: pointer;
+  }
+
+  &__mission-name {
+    font-size: 22px;
+    font-family: $secondary-font;
+    text-transform: uppercase;
+    margin-top: 10px;
+    text-align: center;
+  }
+
+  &__rocket-name {
+    opacity: 0.75;
+  }
 }
 
 input[type="checkbox"] {
-    display: none;
+  display: none;
+}
+
+label svg {
+  width: 44px;
+  height: 44px;
+  fill: none;
+  stroke: #000;
+  stroke-width: 2px;
+}
+
+input[type="checkbox"]:checked+label svg {
+  fill: #FFC107;
+  animation: pop_42 0.5s ease-out;
+}
+
+@keyframes pop_42 {
+  0% {
+    transform: scale(1);
   }
-  
-  label svg {
-    width: 44px;
-    height: 44px;
-    fill: none;
-    stroke: #000;
-    stroke-width: 2px;
+
+  50% {
+    transform: scale(1.5);
   }
-  
-  input[type="checkbox"]:checked + label svg {
-    fill: #FFC107;
-    animation: pop_42 0.5s ease-out;
+
+  100% {
+    transform: scale(1);
   }
-  
-  @keyframes pop_42 {
-    0% {
-      transform: scale(1);
-    }
-  
-    50% {
-      transform: scale(1.5);
-    }
-  
-    100% {
-      transform: scale(1);
-    }
-  }
-  
+}
