--- a/src/app/launches/launches.component.scss
+++ b/src/app/launches/launches.component.scss
@@ -7,6 +7,13 @@
   position: relative;
 }
 
+img{
+  width: 100%; //helps the images to maintain themselves on a responsive layout
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  cursor: pointer;
+}
+
 .items {
   display: grid;
   gap: 1rem;
@@ -15,15 +22,14 @@
 
 .favorite-launch{
   width: 500px;
+  margin-inline: 0.5rem;
   grid-column: 1 / -1;
   grid-row: 1;
   z-index: 1;
-  &__img {
-    width: 100%; //helps the images to maintain themselves on a responsive layout
-    aspect-ratio: 1/1;
-    object-fit: cover;
-    cursor: pointer;
-  }
+}
+
+.favorite-img{
+  max-width: 60%;
 }
 
 .card {
@@ -33,16 +39,7 @@
   background-color: $background-color-secondary;
   border-radius: 15px;
 
-  &__img {
-    width: 100%; //helps the images to maintain themselves on a responsive layout
-    aspect-ratio: 1/1;
-    object-fit: cover;
-    cursor: pointer;
-  }
-
   &__mission-name {
-    font-size: 22px;
-    font-family: $secondary-font;
     text-transform: uppercase;
     margin-top: 10px;
     text-align: center;
