--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /** global variables */
 $font-color: #FFFDFF;
 $background-color: #171818;
-$background-color-secondary: #1E1F22;
+$background-color-secondary: #1F1922;
 
 @font-face {
     font-family: 'Universo Black';
@@ -48,7 +48,7 @@ $secondary-font: 'Loew', sans-serif;
 }
 
 html{
-    background: $background-color;
+    background-color: $background-color-secondary;
 }
 
 p{
@@ -61,4 +61,9 @@ button{
     font-size: 18px;
     cursor: pointer;
     border: 0;
+}
+
+h4{
+    font-family: $secondary-font;
+    font-size: 22px;
 }
