--- a/src/app/launches/launches.component.html
+++ b/src/app/launches/launches.component.html
@@ -14,13 +14,13 @@
                     <img src={{l.links.mission_patch_small}} alt="mission image" class="card__img" />
                 </a>
                 <input type="checkbox" id="star">
-                <label for="star" class="star">
+<!--                 <label for="star" class="star">
                     <svg viewBox="0 0 24 24">
                         <path
                             d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z">
                         </path>
                     </svg>
-                </label>
+                </label> -->
                 <div class="card__card-content">
                     <h4 class="card__mission-name">{{l.mission_name}}</h4>
                     <p class="card__launch-year">{{l.launch_year}}</p>
