scroll bug fixed

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,7 @@
             </button>
         </a>
     </div>
-    <Picture>
+    <picture class="img-container">
         <img src="../../assets/img/rocket.png" alt="rocket" class="rocket-img slide-top">
-    </Picture>
+    </picture>
 </header>
