--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,7 +48,7 @@ $secondary-font: 'Loew', sans-serif;
 }
 
 html{
-    background-color: $background-color-secondary;
+    background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg");
 }
 
 p{
@@ -66,4 +66,5 @@ button{
 h4{
     font-family: $secondary-font;
     font-size: 22px;
+    text-transform: uppercase;
 }
