--- a/src/app/launch-detail/launch-detail.component.html
+++ b/src/app/launch-detail/launch-detail.component.html
@@ -1,44 +1,50 @@
-<div *ngIf="launch$ | async as launch" class="container">
-    <section class="detail-view">
-        <img class="detail-view__image" src={{launch.links.mission_patch}} alt="">
-    </section>
-    <aside class="detail-content">
-        <hr class="divider">
-        <h1 class="detail-content__title">{{launch.mission_name}} </h1>
-        <button class="btn" (click)="saveLaunch()">Edit</button>
-        <h2> {{launch.launch_year}} </h2>
-        <p> {{launch.rocket.rocket_name }} </p>
-        <p> {{launch.launch_site.site_name}}    </p>
-        <p> {{launch.details}}  </p>
-    </aside>
-    <div style="overflow: hidden;">
-        <svg
-          preserveAspectRatio="none"
-          viewBox="0 0 1200 120"
-          xmlns="http://www.w3.org/2000/svg"
-          style="fill: #ffffff; width: 172%; height: 500px; transform: rotate(180deg) scaleX(-1);"
-        >
-          <path d="M321.39 56.44c58-10.79 114.16-30.13 172-41.86 82.39-16.72 168.19-17.73 250.45-.39C823.78 31 906.67 72 985.66 92.83c70.05 18.48 146.53 26.09 214.34 3V0H0v27.35a600.21 600.21 0 00321.39 29.09z" />
-        </svg>
+<ng-container *ngIf="!isEditing">
+    <div *ngIf="launch$ | async as launch" class="container">
+        <section class="detail-view">
+            <img class="detail-view__image" src={{launch.links.mission_patch}} alt="">
+        </section>
+        <aside class="detail-content">
+            <hr class="divider">
+            <h1 class="detail-content__title">{{launch.mission_name}} </h1>
+            <button class="btn" (click)="isEditing= true">Edit</button>
+            <h2> {{launch.launch_year}} </h2>
+            <p> {{launch.rocket.rocket_name }} </p>
+            <p> {{launch.launch_site.site_name}} </p>
+            <p> {{launch.details}} </p>
+        </aside>
+        <div style="overflow: hidden;">
+            <svg preserveAspectRatio="none" viewBox="0 0 1200 120" xmlns="http://www.w3.org/2000/svg"
+                style="fill: #ffffff; width: 172%; height: 500px; transform: rotate(180deg) scaleX(-1);">
+                <path
+                    d="M321.39 56.44c58-10.79 114.16-30.13 172-41.86 82.39-16.72 168.19-17.73 250.45-.39C823.78 31 906.67 72 985.66 92.83c70.05 18.48 146.53 26.09 214.34 3V0H0v27.35a600.21 600.21 0 00321.39 29.09z" />
+            </svg>
+        </div>
     </div>
-</div>
+</ng-container>
 
-<!-- <div>
-  <form [formGroup]="form">
-    <label for="mission_name">
-        <input formControlName="mission_name">
-    </label>
-    <label for="launch_year">
-        <input formControlName="launch_year">
-    </label>
-    <label for="rocket_name">
-        <input formControlName="rocket_name">
-    </label>
-    <label for="site_name">
-        <input formControlName="site_name">
-    </label>
-    <label for="details">
-        <input formControlName="details">
-    </label>
-</form>
-</div> -->
+
+<ng-container *ngIf="isEditing">
+    <div *ngIf="launch$ | async as launch" class="container">
+        <section class="detail-view">
+            <img class="detail-view__image" src={{launch.links.mission_patch}} alt="">
+        </section>
+        <form [formGroup]="form" class="detail-content">
+            <label for="mission_name">
+                <input formControlName="mission_name" placeholder="mission name">
+            </label>
+            <label for="launch_year">
+                <input formControlName="launch_year" placeholder="launch year">
+            </label>
+            <label for="rocket_name">
+                <input formControlName="rocket_name" placeholder="rocket name">
+            </label>
+            <label for="site_name">
+                <input formControlName="site_name" placeholder="site name">
+            </label>
+            <label for="details">
+                <input formControlName="details" placeholder="details">
+            </label>
+            <button type="button" class="btn" (click)="saveLaunch()" [disabled]="form.invalid">Save </button>
+        </form>
+    </div>
+</ng-container>
