--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,17 +2,20 @@
 $font-color: #FFFDFF;
 $background-color: #171818;
 $background-color-secondary: #1F1922;
+$accent-color: #a3e583;
 
 @font-face {
     font-family: 'Universo Black';
     src: url(./assets/font/UniversoBlack.ttf);
 }
+
 $font-title: 'Universo Black', sans-serif;
 
 @font-face {
     font-family: 'Hiruko Pro';
     src: url(./assets/font/HirukoLight.otf);
 }
+
 $principal-font: 'Hiruko Pro', sans-serif;
 
 @font-face {
@@ -30,7 +33,7 @@ $secondary-font: 'Loew', sans-serif;
     flex-flow: $direction $wrap;
 }
 
-@mixin background($url-image, $size: cover, $repeat: no-repeat, $position: center){
+@mixin background($url-image, $size: cover, $repeat: no-repeat, $position: center) {
     background-image: $url-image;
     background-size: $size;
     background-repeat: $repeat;
@@ -40,31 +43,52 @@ $secondary-font: 'Loew', sans-serif;
 
 /** General styles */
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: content-box;
     color: $font-color;
 }
 
-html{
+html {
     background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg");
 }
 
-p{
+p {
     font-family: $principal-font;
     font-size: 22px;
 }
 
-button{
+button {
     font-family: $principal-font;
     font-size: 18px;
     cursor: pointer;
     border: 0;
 }
 
-h4{
+h4 {
     font-family: $secondary-font;
     font-size: 22px;
     text-transform: uppercase;
+}
+
+input {
+    width: 250px;
+    background-color: #f5f5f5;
+    font-family: $secondary-font;
+    color: #242424;
+    padding: .15rem .5rem;
+    min-height: 40px;
+    outline: none;
+    border: none;
+    line-height: 1.15;
+    box-shadow: 0px 10px 20px -18px;
+    border-radius: 15px;
+
+    &:focus {
+        border: none;
+        outline: none;
+        border-bottom: 1px solid $accent-color;
+    }
+
 }
