--- a/src/app/launches/launches.component.html
+++ b/src/app/launches/launches.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-    <ng-container *ngFor="let launch of launches$ | async">
+    <ng-container *ngFor="let launch of launches$ | async; trackBy: trackByFlightNumber">
         <article class="launches-list">
             <a routerLink="/detail/{{launch.flight_number}}">
                 <img src={{launch.links.mission_patch_small}}
@@ -8,7 +8,6 @@
             </a>
             <div class="launches-list__title">
                 <h4>{{launch.mission_name}}</h4>
-                {{isFavoriteLaunch}}
                 <input type="radio" [class.is-favorite]="isFavoriteLaunch" name="favorite" (change)="addFavorite(launch)">
                 <!--                 <input type="radio" id="star" (change)="addFavorite(l)"> -->
                 <label for="star" class="star">
