--- a/src/app/launch-detail/launch-detail.component.scss
+++ b/src/app/launch-detail/launch-detail.component.scss
@@ -110,3 +110,24 @@ hr {
 .custom-shape-divider-bottom-1677518807 .shape-fill {
     fill: #FFFFFF;
 }
+
+input {
+    width: 250px;
+    background-color: #f5f5f5;
+    font-family: $secondary-font;
+    color: #242424;
+    padding: .15rem .5rem;
+    min-height: 40px;
+    outline: none;
+    border: none;
+    line-height: 1.15;
+    box-shadow: 0px 10px 20px -18px;
+    border-radius: 15px;
+
+    &:focus {
+        border: none;
+        outline: none;
+        border-bottom: 1px solid $accent-color;
+    }
+
+}
