Using array now instead of observables
As consequence, the favorites and editing mode it's broken. It's being fixed atm

--- a/src/app/launches/launches.component.html
+++ b/src/app/launches/launches.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-    <ng-container *ngFor="let launch of launches$ | async; trackBy: trackByFlightNumber">
+    <ng-container *ngFor="let launch of launchesArray; trackBy: trackByFlightNumber">
         <article class="launches-list">
             <a (click)="goToLaunch(launch)">
                 <img src={{launch.links.mission_patch_small}}
