--- a/src/app/launch-detail/launch-detail.component.html
+++ b/src/app/launch-detail/launch-detail.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="!isEditing">
-    <div *ngIf="launch$ | async as launch" class="container">
+    <div *ngIf="launch" class="container">
         <div class="custom-shape-divider-bottom-1677518807">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
                 preserveAspectRatio="none">
@@ -32,7 +32,7 @@
 
 
 <ng-container *ngIf="isEditing">
-    <div *ngIf="launch$ | async as launch" class="container">
+    <div *ngIf="launch" class="container">
         <section class="detail-view">
             <img class="detail-view__image" src={{launch.links.mission_patch}} alt="">
         </section>
