--- a/src/app/launches/launches.component.html
+++ b/src/app/launches/launches.component.html
@@ -1,9 +1,7 @@
 <section class="container">
     <ng-container *ngFor="let launch of launchesArray; trackBy: trackByFlightNumber; let i= index">
-        <p appFer [index]="i" ></p>
-        <p>{{i | ordinal}}</p>
-        <!-- <app-index-launch [index]="i+1"></app-index-launch> -->
         <article class="launches-list">
+            <p appFer [index]="i | ordinal"></p>
             <a (click)="goToLaunch(launch)">
                 <img src={{launch.links.mission_patch_small}}
                     onerror="this.onerror= null; this.src='../../assets/img/default-img.png'" alt="mission image"
