--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,6 +67,15 @@ button {
     border: 0;
 }
 
+h1{
+    font-family: $font-title;
+    font-size: 8rem;
+}
+
+h3{
+    font-family: $font-title;
+}
+
 h4 {
     font-family: $secondary-font;
     font-size: 22px;
